--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/cmpr_net
+    url: jdbc:mysql://localhost:3307/cmpr_net_test
     username: root
     password: 121342
     driver-class-name: com.mysql.cj.jdbc.Driver
